--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -14,6 +14,9 @@ table {
 label, input, button, h2 {
     font-family: 'JetBrains Mono', sans-serif;
 }
-label, input, button {
+label, input {
     font-size: 16px;
+}
+button {
+    font-size: 18px;
 }
